fix: spacing fixes

--- a/main.css
+++ b/main.css
@@ -2,11 +2,17 @@
 body {
     color: white;
     font-family: 'Lato', sans-serif;
+    position: relative;
+    height: 100vh;
 }
 
 .container {
     background-color: black;
     border-radius: 20px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
 }
 
 #texti {
@@ -27,3 +33,4 @@ body {
 .texti {
     font-family: 'Poppins', sans-serif;
 }
+
